fix user profile update fetching data for FE